--- a/OpenTK1/OpenTK1.csproj
+++ b/OpenTK1/OpenTK1.csproj
@@ -60,6 +60,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="fragmentShader.frag" />
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -71,6 +72,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="vertexShader.vert" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
